--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ Intermediate/ProjectFiles/SpaceStationGame.vcxproj.user
 Plugins/
 Saved/
 Build/
-ThirdParty/MySQL/
-ThirdParty/Boost/
+ThirdParty/MySQL
+ThirdParty/Boost
 
 #Filetypes
 *.pdb
