--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,8 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 HealthCalculationMethod=Additive
 
 [/Script/SpaceStationGame.MySQLObject]
-ServerUrl="tcp://10.0.0.125:3306"
+ServerODBCName=SpaceStationGameServer
+ServerPort=3306
 ServerUsername=admin
 ServerPassword=admin
 ServerDatabase=spacestationgameTEST
