--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -681,8 +681,8 @@ bCanBlueprintsTickByDefault=False
 bEnableEditorPSysRealtimeLOD=False
 bUseFixedFrameRate=False
 FixedFrameRate=30.000000
-bSmoothFrameRate=False
-SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=20.000000),UpperBound=(Type=Exclusive,Value=30.000000))
+bSmoothFrameRate=True
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=20.000000),UpperBound=(Type=Inclusive,Value=60.000000))
 bCheckForMultiplePawnsSpawnedInAFrame=False
 NumPawnsAllowedToBeSpawnedInAFrame=2
 bShouldGenerateLowQualityLightmaps=True
